# rep2recall.py

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  pyserver.py  pytest.ini  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
docs/: api.md  search.md
public/: electron.js  index.css  index.html  loading.html
rep2recall/: __main__.py  server.py  shared.py
rep2recall/api/: io.py
rep2recall/engine/: db.py  search.py  typing.py  util.py
src/node/: electron.ts
src/python/: server.py  shared.py
src/python/api/: editor.py  io.py  media.py  quiz.py
src/python/engine/: anki.py  db.py  quiz.py  search.py  typing.py  util.py
src/test/: test_search.py  test_util.py  util.ts
src/web/: EditorUi.ts  ImportUi.ts  QuizUi.ts  SettingsUi.ts  contextmenu.ts  index.scss  index.ts  shared.ts  util.ts
src/web/css/: editor.scss  quiz.scss
src/web/editor/: DatetimeNullable.ts  EntryEditor.ts  MarkdownEditor.ts  SimpleMde.ts  TagEditor.ts
src/web/quiz/: QuizUi.ts  TreeviewItem.ts
src/web/util/: util.ts
