[tool.poetry]
name = "rep2recall-py"
version = "0.3.0"
description = ""
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-cors = "^3.0"
appdirs = "^1.4"
flask-socketio = "^4.0"
python-slugify = "^3.0"
gevent = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.3"
pyinstaller = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
