[tool.poetry]
name = "rep2recall-sqlite"
version = "0.4.0"
description = "Rep2Recall with Python SQLite"
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-cors = "^3.0"
appdirs = "^1.4"
flask-socketio = "^4.0"
gevent = "^1.4"
send2trash = "^1.5"
python-dotenv = "^0.10.3"
easydict = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.3"
pyinstaller = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
