[tool.poetry]
name = "rep2recall"
version = "0.4.0"
description = "Rep2Recall with Python SQLite"
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-cors = "^3.0"
flask-socketio = "^4.0"
gevent = "^1.4"
python-dotenv = "^0.10.3"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pyinstaller = "^3.5"
macholib = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
